Add route, controller, validator for cancel/refund booked flight
